fix: fixed main scrollbar theme to light toggling

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -7,6 +7,15 @@ body {
   overflow-x: hidden;
 }
 
+:global(.light_theme) {
+
+  html,
+  body {
+    background-color: $gray-600;
+    color: $black;
+  }
+}
+
 .App {
   width: 100%;
   height: 100%;
@@ -56,6 +65,7 @@ body {
   ::-webkit-scrollbar-track {
     background-color: $white;
   }
+
   ::-webkit-scrollbar-thumb {
     background-color: $gray-400;
   }
